force-app/main/default/objects/Job_Posting__c/fields/Apply_URL__c.field-meta.xml
<CustomField>
    <fullName>Apply_URL__c</fullName>
    <description>Direct application link</description>
    <label>Apply URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>