force-app/main/default/objects/Job_Posting__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>Company/employer name</description>
    <label>Company</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>