force-app/main/default/objects/Job_Posting__c/fields/Company_Stage_Enterprise__c.field-meta.xml
<CustomField>
    <fullName>Company_Stage_Enterprise__c</fullName>
    <description>This field identifies the company stage.</description>
    <label>Company Stage Enterprise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Startup</fullName>
            </value>
            <value>
                <fullName>Scale-up</fullName>
            </value>
            <value>
                <fullName>Mid-market</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>