force-app/main/default/objects/Job_Posting__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <description>Currency code (USD, EUR, GBP, etc.)</description>
    <label>Currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>