force-app/main/default/objects/Job_Posting__c/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <description>Unique identifier: {Provider}:{JobID}</description>
    <label>External ID</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>