force-app/main/default/objects/Job_Posting__c/fields/Fit_Score__c.field-meta.xml
<CustomField>
    <fullName>Fit_Score__c</fullName>
    <description>Overall fit score calculated by Claude AI (0-10) based on holistic decision framework</description>
    <label>Fit Score</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>