force-app/main/default/objects/Job_Posting__c/fields/Flexible_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Flexible_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flexible Schedule</label>
    <type>Checkbox</type>
</CustomField>