force-app/main/default/objects/Job_Posting__c/fields/Green_Flags__c.field-meta.xml
<CustomField>
    <fullName>Green_Flags__c</fullName>
    <label>Green Flags</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>