force-app/main/default/objects/Job_Posting__c/fields/Has_ND_Program__c.field-meta.xml
<CustomField>
    <fullName>Has_ND_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has ND Program</label>
    <type>Checkbox</type>
</CustomField>