force-app/main/default/objects/Job_Posting__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>Industry/sector</description>
    <label>Industry</label>
    <type>TextArea</type>
</CustomField>