force-app/main/default/objects/Job_Posting__c/fields/Interview_Completed__c.field-meta.xml
<CustomField>
    <fullName>Interview_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate if interview has been completed</description>
    <label>Interview Completed</label>
    <type>Checkbox</type>
</CustomField>