force-app/main/default/objects/Job_Posting__c/fields/Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>Interview_Date__c</fullName>
    <description>Date and time of scheduled interview for this job posting</description>
    <label>Interview Date</label>
    <type>DateTime</type>
</CustomField>