force-app/main/default/objects/Job_Posting__c/fields/Interview_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Interview_Feedback__c</fullName>
    <description>Post-interview reflections, how it went, red/green flags identified during interview</description>
    <label>Interview Feedback</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>