force-app/main/default/objects/Job_Posting__c/fields/Interview_Notes__c.field-meta.xml
<CustomField>
    <fullName>Interview_Notes__c</fullName>
    <description>Notes and preparation for interview, questions to ask, research about company</description>
    <label>Interview Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>