force-app/main/default/objects/Job_Posting__c/fields/LastSynced__c.field-meta.xml
<CustomField>
    <fullName>LastSynced__c</fullName>
    <description>Last sync from source</description>
    <label>Last Synced</label>
    <type>DateTime</type>
</CustomField>