force-app/main/default/objects/Job_Posting__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Job location (city, state, country)</description>
    <label>Location</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>