force-app/main/default/objects/Job_Posting__c/fields/ND_Friendliness_Score__c.field-meta.xml
<CustomField>
    <fullName>ND_Friendliness_Score__c</fullName>
    <description>Min: 0, Max: 10</description>
    <label>ND Friendliness Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>