force-app/main/default/objects/Job_Posting__c/fields/Recruiter_Email__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Email__c</fullName>
    <description>Email address of the recruiter or HR contact</description>
    <label>Recruiter Email</label>
    <type>Email</type>
</CustomField>