force-app/main/default/objects/Job_Posting__c/fields/Recruiter_LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_LinkedIn__c</fullName>
    <description>LinkedIn profile URL of the recruiter or HR contact</description>
    <label>Recruiter LinkedIn</label>
    <type>Url</type>
</CustomField>