force-app/main/default/objects/Job_Posting__c/fields/Recruiter_Name__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Name__c</fullName>
    <description>Name of the recruiter or HR contact for this job posting</description>
    <label>Recruiter Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>