force-app/main/default/objects/Job_Posting__c/fields/Recruiter_Phone__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Phone__c</fullName>
    <description>Phone number of the recruiter or HR contact</description>
    <label>Recruiter Phone</label>
    <type>Phone</type>
</CustomField>