force-app/main/default/objects/Job_Posting__c/fields/Recruiter_Title__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Title__c</fullName>
    <description>Job title of the recruiter or HR contact (e.g., Technical Recruiter, HR Manager)</description>
    <label>Recruiter Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>