force-app/main/default/objects/Job_Posting__c/fields/Red_Flags__c.field-meta.xml
<CustomField>
    <fullName>Red_Flags__c</fullName>
    <label>Red Flags</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>