force-app/main/default/objects/Job_Posting__c/fields/Remote_Policy__c.field-meta.xml
<CustomField>
    <fullName>Remote_Policy__c</fullName>
    <label>Remote Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Remote-First</fullName>
            </value>
            <value>
                <fullName>Fully Remote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>