force-app/main/default/objects/Job_Posting__c/fields/Research_Date__c.field-meta.xml
<CustomField>
    <fullName>Research_Date__c</fullName>
    <description>This field is for the date and time research was conducted on a company job posting.</description>
    <label>Research Date</label>
    <type>DateTime</type>
</CustomField>