force-app/main/default/objects/Job_Posting__c/fields/Research_JSON__c.field-meta.xml
<CustomField>
    <fullName>Research_JSON__c</fullName>
    <description>This field is for the purposes of storing the JSON research findings.</description>
    <label>Research JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>