force-app/main/default/objects/Job_Posting__c/fields/Salary_Max__c.field-meta.xml
<CustomField>
    <fullName>Salary_Max__c</fullName>
    <description>Maximum salary</description>
    <label>Salary Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>