force-app/main/default/objects/Job_Posting__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <description>Semicolon-separated tags (departments, categories)</description>
    <label>Tags</label>
    <type>TextArea</type>
</CustomField>