force-app/main/default/objects/Job_Posting__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Job title/position name</description>
    <label>Title</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>