force-app/main/default/objects/Job_Posting__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>Link to job posting</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>