force-app/main/default/objects/Job_Posting__c/fields/Workplace_Type__c.field-meta.xml
<CustomField>
    <fullName>Workplace_Type__c</fullName>
    <label>Workplace Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Remote</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>On-site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>