force-app/main/default/objects/Job_Posting__c/listViews/Active_Needs_Review.listView-meta.xml
<ListView>
    <fullName>Active_Needs_Review</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Company__c</columns>
    <columns>Location__c</columns>
    <columns>Remote_Policy__c</columns>
    <columns>Salary_Min__c</columns>
    <columns>Salary_Max__c</columns>
    <columns>ND_Friendliness_Score__c</columns>
    <columns>Green_Flags__c</columns>
    <columns>Red_Flags__c</columns>
    <columns>Posted_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active - Needs Review</label>
</ListView>